--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -1,3 +1,5 @@
+@use 'variables';
+
 .hero {
     padding-top: 64px;
     padding-bottom: 100px;
@@ -17,7 +19,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #000;
+        background-color: variables.$secondaryTextColor;
         opacity: .5;
     }
 
@@ -26,9 +28,13 @@
         margin-bottom: 64px;
         font-size: 40px;
         line-height: 56px;
-        color: #fff;
         font-weight: 900;
         text-align: center;
+        color: variables.$textColor;
+
+        span{
+            color: variables.$colorSpan;
+        }
     }
 
     &__logo{
